--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               e.features[0].properties?.activities
             );
 
-            const latlngForPopup = e.features[0].geometry.type === "MultiPolygon" ? e.features[0].geometry.coordinates[0][0][0]
+            const latlngForPopup = e.features[0].geometry.type === "MultiPolygon" ? e.features[0].geometry.coordinates[0][0][0][0]
                                                                                   : e.features[0].geometry.coordinates[0][0]
 
             const popup = new mapboxgl.Popup({ closeOnClick: true })
